<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="rocks.teagantotally.blinkercarbrowser.ui.vms.VehicleVM" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:padding="16dp">

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.year}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1999" />

        <TextView
            android:id="@+id/make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@{vm.make}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/year"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Subaru" />

        <TextView
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@{vm.model}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/make"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Impreza" />

        <TextView
            android:id="@+id/mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@{vm.mileage}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/mileage_label"
            app:layout_constraintTop_toBottomOf="@+id/model"
            tools:text="123" />

        <TextView
            android:id="@+id/mileage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miles"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model" />

    </android.support.constraint.ConstraintLayout>

</layout>