...
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

        <EditText
            android:id="@+id/query_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:hint="@string/search"
            android:padding="4dp"
            android:visibility="@{vm.searchBarVisibility}"
...
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:refreshListener="@{vm.refreshListener}"
            app:refreshing="@{vm.isRefreshing}">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/vehicle_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="false"
                android:background="@android:color/darker_gray"
                app:clickHandler="@{vm.itemClickHandler}"
                app:itemViewBinder="@{vm.itemBinder}"
...
